changed file to trusted

--- a/StarcraftProject.ipynb
+++ b/StarcraftProject.ipynb
@@ -191,30 +191,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "9508022a",
-   "metadata": {
-    "extensions": {
-     "jupyter_dashboards": {
-      "version": 1,
-      "views": {
-       "grid_default": {},
-       "report_default": {
-        "hidden": true
-       }
-      }
-     }
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Trying my hand at an individual prediction\n",
-    "player_1625 = [[17, 28, 97.5852, 5, 1.707059, 8]]\n",
-    "prediction = regressor.predict(player_1625)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e50f3452",
    "metadata": {
@@ -236,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "733aff20",
    "metadata": {
     "extensions": {
@@ -255,12 +231,54 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3288cd98f7404c519ef531c6ecddaf1d",
+       "model_id": "0d43c590ec664b5aa677553f69b7ed43",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Label(value=\"Use the sliders to input a player's value for each attribute, then click the button to predict th…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "63aaabf24540419e8410ff08d4ca22a2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "HBox(children=(VBox(children=(Label(value='Age', layout=Layout(display='flex', justify_content='flex-end')), L…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fe1b522d010640b0891aab228b3acede",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Predict League', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b4b81ad7d0f34c72bf7d87b99361901f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
       ]
      },
      "metadata": {},
@@ -325,58 +343,12 @@
     "col_2=VBox([age_slider, hours_slider, apm_slider, unique_hotkeys, workers_made_per_minute, unique_units])\n",
     "\n",
     "grid = HBox([col_1, col_2])\n",
+    "instructions=Label(\"Use the sliders to input a player's value for each attribute, then click the button to predict their league.\")\n",
     "\n",
-    "display(grid)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "2a4e6929",
-   "metadata": {
-    "extensions": {
-     "jupyter_dashboards": {
-      "version": 1,
-      "views": {
-       "grid_default": {},
-       "report_default": {
-        "hidden": false
-       }
-      }
-     }
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0c902def4ad43518961a625e5bc024c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Predict League', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "593bfa1ab1794ddebef203f96ef1a8d0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "display(instructions)\n",
+    "display(grid)\n",
+    "\n",
+    "#Button logic\n",
     "prediction_value = regressor.predict([[age_slider.value, hours_slider.value, apm_slider.value,\n",
     "                                      unique_hotkeys.value, workers_made_per_minute.value, unique_units.value]])\n",
     "\n",
